--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ catboost==1.0.3
 bokeh==2.4.1
 numpy==1.20.1
 pandas==1.2.4
-streamlit==1.2.0
+streamlit>=1.8.1
 plotly==5.4.0
 statsmodels==0.13.0
 streamlit_bokeh_events
